--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage":"http://vthonte.github.io/vthonte.github.io",
+  "homepage":"http://vthonte.github.io/vthonte.github.io/",
   "name": "linktree",
   "version": "0.1.0",
   "private": true,
