--- a/public/manifest.json
+++ b/public/manifest.json
@@ -17,6 +17,10 @@
       "type": "image/png",
       "sizes": "512x512"
     }
+    {
+      "src": "github.svg",
+      "type": "image/png"
+    }
   ],
   "start_url": ".",
   "display": "standalone",
